--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div id="home-page" class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
@@ -50,7 +50,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="" href="index.html#my-photo">home</a></li>
+                                        <li><a class="" href="index.html#home-page">home</a></li>
                                         <li><a href="index.html#about-me">About Us</a></li>
                                         <li><a href="index.html#services">Services</a></li>
                                         <li><a href="index.html#popular-projects">Products</a></li>
@@ -63,7 +63,7 @@
                             <div class="log_chat_area d-flex align-items-center">
                                 <div class="live_chat_btn">
                                     <a class="boxed_btn_orange"
-                                        href="mailto:contact@mlglow.com?subject=Inquiry from Website">
+                                        href="mailto:support@mlglow.com?subject=Inquiry from Website">
                                         <i class="flaticon-user"></i>
                                         <span>Reach Us</span>
                                     </a>
@@ -93,19 +93,20 @@
                     <div class="col-xl-16 col-md-12">
                         <div class="slider_info">
                             <h3> AI & ML for Educational Institutions</h3>
+                            <h2> Our Software helps Professors, Parents and Executives to have <strong> <a id="doc" href=""><b>absolute insights over students' performance </b></a> </strong>! 
+                                The software also sents out a <strong> <a id="doc" href=""><b> monthly report </b></a> </strong> to the parents via Email! </h2>
                         </div>
                     </div>
 
-                    <div class="col-xl-10 col-md-6">
+                    <!-- <div class="col-xl-10 col-md-6">
 
                         <div class="col-sm"></div>
                         <div class="col-sm text-center">
                             <img src="img/projects/ai4edu.gif" alt="My Head" height="420px" width="850px" class="">
-
                         </div>
                         <div class="col-sm"></div>
 
-                    </div>
+                    </div> -->
 
 
                 </div>
@@ -386,9 +387,11 @@
                                 Address
                             </h3>
                             <ul>
-                                <li><a
-                                        href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
-                                        Leuven-Belgium</a></li>
+                                <li><a> Waversebaan 62 </a> </li>
+                                <li><a> Oud-Heverlee, 3050 Belgium </a> </li>
+                                <a id="doc" href=""><b>support@mlglow.com</b></a>
+                                <!-- <li><a href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
+                                    Oud-Heverlee, Belgium</a></li> -->
                             </ul>
                         </div>
                     </div>
