--- a/medical.html
+++ b/medical.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div id="home-page" class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
@@ -50,7 +50,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="" href="index.html#my-photo">home</a></li>
+                                        <li><a class="" href="index.html#home-page">home</a></li>
                                         <li><a href="index.html#about-me">About Us</a></li>
                                         <li><a href="index.html#services">Services</a></li>
                                         <li><a href="index.html#popular-projects">Products</a></li>
@@ -63,7 +63,7 @@
                             <div class="log_chat_area d-flex align-items-center">
                                 <div class="live_chat_btn">
                                     <a class="boxed_btn_orange"
-                                        href="mailto:contact@mlglow.com?subject=Inquiry from Website">
+                                        href="mailto:support@mlglow.com?subject=Inquiry from Website">
                                         <i class="flaticon-user"></i>
                                         <span>Reach Us</span>
                                     </a>
@@ -92,20 +92,19 @@
 
                     <div class="col-xl-16 col-md-12">
                         <div class="slider_info">
-                            <h3> &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp AI & ML for Medical Diagnosis</h3>
+                            <h3> AI & ML for Medical Diagnosis</h3>
+                            <h2> An AI based (research-level) Software that has the capability of <strong> <a id="doc" href=""><b> assisting Medical Practitioners in Medical Diagnosing!</b></a> </strong> </h2>
+
                         </div>
                     </div>
 
-                    <div class="col-xl-10 col-md-6">
-
+                    <!-- <div class="col-xl-10 col-md-6">
                         <div class="col-sm"></div>
                         <div class="col-sm text-center">
                             <img src="img/projects/ai4covid.gif" alt="My Head" height="420px" width="850px" class="">
-
                         </div>
                         <div class="col-sm"></div>
-
-                    </div>
+                    </div> -->
 
 
                 </div>
@@ -125,8 +124,8 @@
                 <div class="col-lg-12 posts-list">
                     <div class="single-post">
                         <div class="blog_details">
-                            <h2> AI/ML based Python App and a Dashboard for Medical Practitioners
-                            </h2>
+                            <h2> Incubation Software: AI/ML based Prediction & Dashboarding for Medical Practitioners</h2>
+
                             <ul class="blog-info-link mt-3 mb-4">
                                 <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Explainable AI
                                     </a></li>
@@ -257,12 +256,8 @@
                             <p>
                                 <p style="font-weight:bolder;"></p>
                                 <font size="4">
-                                    The following video shows a minimal version of the <a id="doc"
-                                        href="https://ai4healthcare-covid.herokuapp.com"><b> AI based medical diagnosis
-                                            dashboard</b></a>.
-                                    The application is deployed in Heroku, and can be accessed anonymously.
-                                    As the application sleeps while it is not actively used, the first load often
-                                    takes some time.
+                                    The following video shows a minimal version of the AI based medical diagnosis
+                                    dashboard.
                                 </font>
                             </p>
 
@@ -364,9 +359,11 @@
                                 Address
                             </h3>
                             <ul>
-                                <li><a
-                                        href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
-                                        Leuven-Belgium</a></li>
+                                <li><a> Waversebaan 62 </a> </li>
+                                <li><a> Oud-Heverlee, 3050 Belgium </a> </li>
+                                <a id="doc" href=""><b>support@mlglow.com</b></a>
+                                <!-- <li><a href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
+                                    Oud-Heverlee, Belgium</a></li> -->
                             </ul>
                         </div>
                     </div>
