--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div id="home-page" class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
@@ -50,7 +50,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="" href="#my-photo">home</a></li>
+                                        <li><a class="" href="#home-page">home</a></li>
                                         <li><a href="#about-me">About Us</a></li>
                                         <li><a href="#services">Services</a></li>
                                         <li><a href="#popular-projects">Products</a></li>
@@ -63,7 +63,7 @@
                             <div class="log_chat_area d-flex align-items-center">
                                 <div class="live_chat_btn">
                                     <a class="boxed_btn_orange"
-                                        href="mailto:contact@mlglow.com?subject=Inquiry from Website">
+                                        href="mailto:support@mlglow.com?subject=Inquiry from Website">
                                         <i class="flaticon-user"></i>
                                         <span>Reach Us</span>
                                     </a>
@@ -109,8 +109,6 @@
 
 
 
-
-
     <!-- about_area_start -->
     <div id="about-me" class="about_area">
         <div class="container">
@@ -118,8 +116,8 @@
                 <div class="col-xl-5 col-lg-6">
                     <div class="single_about_info">
                         <h3> About Us! <br> </h3>
-                        <p>MLGlow helps you to <strong>transform your business operations with AI technologies</strong>.
-                            We are experts in bringing <strong>artificial intelligence (AI) & machine learning (ML) intelligence to production rapidly</strong>.
+                        <p>MLGlow helps you to <strong><a id="doc" href=""><b> transform your business operations with AI technologies</b></a></strong>.
+                            We are experts in bringing <strong><a id="doc" href=""><b> artificial intelligence (AI) & machine learning (ML) intelligence to production rapidly</b></a></strong>.
                             We offer support to businesses to create end-to-end AI, ML and Data Science pipelines to
                             solve business problems. </p>
                         <a href="#services" class="boxed_btn"> Browse Services          </a>
@@ -312,6 +310,27 @@
                                 </div>
                             </div>
                             <!-- AI4AO ends here -->
+
+
+                             <!--  AI4Education starts here -->
+                             <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="rlsoft.html">
+                                            <img src="img/articles/rl_head_copy.png" controls autoplay muted loop alt="">
+                                        </a>
+                                    </div>
+
+                                    <div class="courses_info">
+                                        <span>Reinforcement Learning</span>
+                                        <h3><a href="rlsoft.html"> RLSoft (NEW)</a>
+                                        </h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- AI4Education ends here -->
 
                         </div> <!--  end: class="row" -->
                     </div> <!--  end: class="tab-pane fade show active" -->
@@ -895,9 +914,11 @@
                                 Address
                             </h3>
                             <ul>
-                                <li><a
-                                        href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
-                                        Leuven-Belgium</a></li>
+                                <li><a> Waversebaan 62 </a> </li>
+                                <li><a> Oud-Heverlee, 3050 Belgium </a> </li>
+                                <a id="doc" href=""><b>support@mlglow.com</b></a>
+                                <!-- <li><a href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
+                                    Oud-Heverlee, Belgium</a></li> -->
                             </ul>
                         </div>
                     </div>
