--- a/predmain.html
+++ b/predmain.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div id="home-page" class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
@@ -50,7 +50,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="" href="index.html#my-photo">home</a></li>
+                                        <li><a class="" href="index.html#home-page">home</a></li>
                                         <li><a href="index.html#about-me">About Us</a></li>
                                         <li><a href="index.html#services">Services</a></li>
                                         <li><a href="index.html#popular-projects">Products</a></li>
@@ -63,7 +63,7 @@
                             <div class="log_chat_area d-flex align-items-center">
                                 <div class="live_chat_btn">
                                     <a class="boxed_btn_orange"
-                                        href="mailto:contact@mlglow.com?subject=Inquiry from Website">
+                                        href="mailto:support@mlglow.com?subject=Inquiry from Website">
                                         <i class="flaticon-user"></i>
                                         <span>Reach Us</span>
                                     </a>
@@ -93,11 +93,11 @@
                     <div class="col-xl-16 col-md-12">
                         <div class="slider_info">
                             <h3> AI & ML for Predictive Maintenance</h3>
+                            <h2> Our Software continuously monitors the data located in the cloud resources to <strong> <a id="doc" href=""><b>forecast and identify critical trends</b></a> </strong> upfront! </h2>
                         </div>
                     </div>
 
-                    <div class="col-xl-10 col-md-6">
-
+                    <!-- <div class="col-xl-10 col-md-6">
                         <div class="col-sm"></div>
                         <div class="col-sm text-center">
                             <img src="img/articles/streamlit/streamlit_demo.gif" alt="My Head" height="420px"
@@ -105,8 +105,7 @@
 
                         </div>
                         <div class="col-sm"></div>
-
-                    </div>
+                    </div> -->
 
 
                 </div>
@@ -126,7 +125,7 @@
                 <div class="col-lg-12 posts-list">
                     <div class="single-post">
                         <div class="blog_details">
-                            <h2> AI/ML based Python App and a Dashboard for Predictive Maintenance
+                            <h2> Software: Forecasting and Dashboarding for Predictive Maintenance
                             </h2>
                             <ul class="blog-info-link mt-3 mb-4">
                                 <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Business
@@ -152,7 +151,7 @@
                             <p>
                                 <p style="font-weight:bolder;"></p>
                                 <font size="4">
-                                    Development of an incubation AI/ML app that will predict the moment of
+                                    Development of an AI/ML application that will predict the moment of
                                     degradation/failure of an aircraft
                                     gas turbine engine well in advance based on historical data emanating from multiple
                                     sensors.
@@ -236,13 +235,8 @@
                             <p>
                                 <p style="font-weight:bolder;"></p>
                                 <font size="4">
-                                    The following video shows a minimal version of the <a id="doc"
-                                        href="https://evening-depths-40056.herokuapp.com"><b>predictive maintenance
-                                            dashboard</b></a>.
-                                    The application is deployed in Heroku, and can be accessed with a credential
-                                    "guest_pm" (both username and password).
-                                    As the application sleeps while it is not actively used, the first load often
-                                    takes some time.
+                                    The following video shows a minimal version of the predictive maintenance
+                                    dashboard.
                                 </font>
                             </p>
 
@@ -332,9 +326,11 @@
                                 Address
                             </h3>
                             <ul>
-                                <li><a
-                                        href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
-                                        Leuven-Belgium</a></li>
+                                <li><a> Waversebaan 62 </a> </li>
+                                <li><a> Oud-Heverlee, 3050 Belgium </a> </li>
+                                <a id="doc" href=""><b>support@mlglow.com</b></a>
+                                <!-- <li><a href="https://www.google.com/maps/place/Leuven/data=!4m2!3m1!1s0x47c160d05ebbdf85:0x40099ab2f4d5690?sa=X&ved=2ahUKEwjO0ILMyovnAhXBZlAKHemgBmgQ8gEwFnoECBIQBA">
+                                    Oud-Heverlee, Belgium</a></li> -->
                             </ul>
                         </div>
                     </div>
