--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                             <!-- AI4AO ends here -->
 
 
-                             <!--  AI4Education starts here -->
-                             <div class="col-xl-4 col-lg-4 col-md-6">
+                             <!--  RLSoft starts here -->
+                             <!-- <div class="col-xl-4 col-lg-4 col-md-6">
                                 <div class="single_courses">
                                     <div class="thumb">
                                         <a href="rlsoft.html">
@@ -329,8 +329,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- AI4Education ends here -->
+                            </div> -->
+                            <!-- RLSoft ends here -->
 
                         </div> <!--  end: class="row" -->
                     </div> <!--  end: class="tab-pane fade show active" -->
