--- a/index.html
+++ b/index.html
@@ -400,6 +400,25 @@
                         <div class="row">
 
 
+                            <!-- DS starts here -->
+                            <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="ds.html">
+                                            <img src="img/articles/ds_head.png" controls autoplay loop alt="">
+                                        </a>
+                                    </div>
+                                    <div class="courses_info">
+                                        <span>Computer Vision</span>
+                                        <h3><a href="ds.html"> MLGlow's DeepVision Tool for Computer Vision Solutions</a></h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- DS ends here -->
+
+
                             <!-- RL starts here -->
                             <div class="col-xl-4 col-lg-4 col-md-6">
                                 <div class="single_courses">
@@ -608,6 +627,25 @@
 
                     <div class="tab-pane fade" id="supervised" role="tabpanel" aria-labelledby="supervised-tab">
                         <div class="row">
+
+
+                            <!-- DS starts here -->
+                            <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="ds.html">
+                                            <img src="img/articles/ds_head.png" controls autoplay loop alt="">
+                                        </a>
+                                    </div>
+                                    <div class="courses_info">
+                                        <span>Computer Vision</span>
+                                        <h3><a href="ds.html"> MLGlow's DeepVision Tool for Computer Vision Solutions</a></h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- DS ends here -->
 
 
                             <!-- google coral starts here -->
