--- a/index.html
+++ b/index.html
@@ -227,6 +227,28 @@
                     <div class="tab-pane fade show active" id="prohome" role="tabpanel" aria-labelledby="prohome-tab">
                         <div class="row">
 
+
+                            <!--  DS Software starts here -->
+                            <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="ds_product.html">
+                                            <img src="img/articles/ds_head.gif" controls autoplay muted loop alt="">
+                                        </a>
+                                    </div>
+
+                                    <div class="courses_info">
+                                        <span>Computer Vision Learning</span>
+                                        <h3><a href="ds_product.html"> Computer Vision Software <p></p><br> </a>
+                                        </h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- DS Software ends here -->
+
+
                             <!--  RLSoft starts here -->
                             <div class="col-xl-4 col-lg-4 col-md-6">
                                 <div class="single_courses">
