--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                                     <div class="courses_info">
                                         <span>Reinforcement Learning</span>
-                                        <h3><a href="rlsoft.html"> RLSoft (NEW)</a>
+                                        <h3><a href="rlsoft.html"> RLSoft </a>
                                         </h3>
                                         <div class="star_prise d-flex justify-content-between">
                                         </div>
