--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                                     </div>
 
                                     <div class="courses_info">
-                                        <span>Computer Vision Learning</span>
-                                        <h3><a href="ds_product.html"> Computer Vision Software <p></p><br> </a>
+                                        <span><p></p><br>Computer Vision Learning</span>
+                                        <h3><a href="ds_product.html"> Computer Vision Software <p></p> </a>
                                         </h3>
                                         <div class="star_prise d-flex justify-content-between">
                                         </div>
