--- a/index.html
+++ b/index.html
@@ -1260,15 +1260,20 @@
                         <!-- <h3> About Us! <br> </h3> -->
                         <p>MLGlow helps you to <strong><a id="doc" href=""><b> transform your business operations with
                                         AI technologies</b></a></strong>.
-                            We are experts in bringing <strong><a id="doc" href=""><b> artificial intelligence (AI) &
+                            We are a group of data scientists (based in Belgium & India ) and business leaders
+                            who are experts in bringing <strong><a id="doc" href=""><b> artificial intelligence (AI) &
                                         machine learning (ML) intelligence to production rapidly</b></a></strong>.
                             We offer support to businesses to create end-to-end AI, ML and Data Science pipelines to
                             solve business problems. </p>
+
+
                         <a href="#services" class="boxed_btn"> Browse Services </a>
                         <a href="#popular-projects" class="boxed_btn">Browse Projects</a>
 
                     </div>
                 </div>
+
+
 
 
 
@@ -1299,6 +1304,36 @@
                 </div>
 
 
+                <!-- <div class="our_courses">
+                    <div class="container">
+
+                        <div class="row">
+                            <div class="col-xl-3 col-md-6 col-lg-6">
+                                <div class="single_course text-center"
+                                    style="height: 500px; width: 500px; overflow: auto; display: flex; flex-direction: column;">
+                                    <div class="icon">
+                                        <img src="img/banner/selvahead.jpg" alt="Data Scientist Image" width="200"
+                                            height="200">
+                                    </div>
+                                    <h3>Dr. Selvakumar Ulaganathan., PhD</h3>
+                                    <h4>Founder</h4>
+                                    <h4>Lead Data Scientist</h4>
+                                    <p>He is an expert in development of end-to-end
+                                        Artificial Intelligence and Machine Learning solutions to solve business
+                                        problems.</p>
+                                    <a href="https://be.linkedin.com/in/selvakumar-ulaganathan-93694826"
+                                        class="btn btn-info" style="margin-top: auto;">Linkedin</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+
+
+
+
+
+
                 <!-- our_team_start -->
                 <div class="our_courses">
                     <div class="container">
@@ -1310,7 +1345,6 @@
                             </div>
                         </div>
                         <div class="row">
-                            <!-- Block 1 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1328,7 +1362,6 @@
                                         class="btn btn-info" style="margin-top: auto;">Linkedin</a>
                                 </div>
                             </div>
-                            <!-- Block 2 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1343,7 +1376,6 @@
                                     <a href="#" class="btn btn-info" style="margin-top: auto;">More info</a>
                                 </div>
                             </div>
-                            <!-- Block 3 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1357,7 +1389,6 @@
                                     <a href="#" class="btn btn-info" style="margin-top: auto;">More info</a>
                                 </div>
                             </div>
-                            <!-- Block 4 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1372,7 +1403,6 @@
                                     <a href="#" class="btn btn-info" style="margin-top: auto;">More info</a>
                                 </div>
                             </div>
-                            <!-- Block 5 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1387,7 +1417,6 @@
                                     <a href="#" class="btn btn-info" style="margin-top: auto;">More info</a>
                                 </div>
                             </div>
-                            <!-- Block 6 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1401,7 +1430,6 @@
                                     <a href="#" class="btn btn-info" style="margin-top: auto;">More info</a>
                                 </div>
                             </div>
-                            <!-- Block 7 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
@@ -1417,7 +1445,6 @@
                                 </div>
                             </div>
 
-                            <!-- Block 8 -->
                             <div class="col-xl-3 col-md-6 col-lg-6">
                                 <div class="single_course text-center"
                                     style="height: 500px; width: 250px; overflow: auto; display: flex; flex-direction: column;">
