--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                 <div class="single_courses">
                                     <div class="thumb">
                                         <a href="rlsoft.html">
-                                            <img src="img/articles/rl_head.png" controls autoplay muted loop alt="">
+                                            <img src="img/projects/rlsoft.gif" controls autoplay muted loop alt="">
                                         </a>
                                     </div>
 
