--- a/rlsoft.html
+++ b/rlsoft.html
@@ -93,14 +93,13 @@
                     <div class="col-xl-16 col-md-12">
                         <div class="slider_info">
                             <h3> RLSoft</h3>
-                            <h2> Our software helps businesses to easily <strong> <a id="doc" href=""><b> experiment and apply Reinforcement Learning </b></a> </strong>to solve their core problems before building an expensive SAAS in Production Environment.</h2>
-                            <p></p><br>
-                                <p></p>
-                            <h2> The sofware can act as a <strong> <a id="doc" href=""><b>key tool to speed up your AI adoption</b></a> </strong> for sectors involving 
-                                <strong> <a id="doc" href=""><b> optimization, supply-chain, critical decision taking problems</b></a> </strong>!</h2>
-                            <p></p><br>
-                                <p></p>
-                            <h2> Reach out to us for more information! </h2>
+                            <h2> Our software helps businesses to easily <strong> <a id="doc" href=""><b> experiment and apply Reinforcement Learning </b></a> </strong>to solve their core problems before spending a lot of investments. 
+                                </h2>
+
+                                <p></p><br>
+
+                            <h2> It allows one to easily <strong> <a id="doc" href=""><b> deploy trained RL models in production with a single click </b></a> </strong>!</h2>
+
                                  
                         </div>
                     </div>
@@ -116,11 +115,131 @@
                     </div> -->
 
 
+
+
                 </div>
             </div>
         </div>
     </div>
     <!-- slider_area_end -->
+
+
+
+    <!--================Blog Area =================-->
+    <section class="blog_area single-post-area section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 posts-list">
+                    <div class="single-post">
+                        <div class="blog_details">
+                            <h2> Streamlined RL: Easier and faster Experimentation & Deployment
+                            </h2>
+                            <!-- <ul class="blog-info-link mt-3 mb-4">
+                                <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Business
+                                        Intelligence
+                                    </a></li>
+                                <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Predictive
+                                        Maintenance
+                                    </a></li>
+                                <li><a href="index.html#about-me"><i class="fa fa-user"></i> By: Selvakumar Ulaganathan,
+                                        PhD</a></li>
+                            </ul> -->
+                            <!--<h6>Disclaimer: The views expressed in this article are those of the Author's. They do not necessarily reflect the views of his employer. </h6> -->
+
+
+
+                            <!-- Introduction -->
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+                            <!-- <h2>What?</h2> -->
+                            <p>
+                                <p style="font-weight:bolder;"></p>
+                                <font size="4">
+                                    The sofware can act as a <strong> <a id="doc" href=""><b>key tool to speed up your AI adoption</b></a> </strong> for sectors involving 
+                                <strong> <a id="doc" href=""><b> optimization, supply-chain, insurance pricing and critical decision taking problems</b></a> </strong>!
+                                </font>
+
+
+                                <div class="col-md-10 mt-sm-30">
+                                    <div class="">
+                                        <ul class="unordered-list">
+                                            <p style="font-weight:bolder;"></p>
+                                            <font size="4">
+                                                <li>Easy RL experimentation with your own<strong> <a id="streamlit"
+                                                            href="https://www.streamlit.io"><b>Digital Twin or Dataset</b></a>
+                                                    </strong></li>
+                                                <li> Enable your Business Team to experiment Business strategies without deep RL training</li>
+                                                <li> Easy deployment to <strong> <a id="heroku"
+                                                            href="https://www.heroku.com"><b>AWS</b></a>
+                                                    </strong> for production consumption</li>
+                                                <li> Ability to Integrate with <strong> <a id="heroku"
+                                                        href="https://aws.amazon.com/pm/sagemaker/?trk=13ea9a0c-44a8-4207-97d1-d0125804ec5a&sc_channel=ps&ef_id=CjwKCAjw15eqBhBZEiwAbDomEintZx17Yjk22uje1_fEML3kmi4520NEiD4a99WzyJmYzKMPHQkSxhoCst8QAvD_BwE:G:s&s_kwcid=AL!4422!3!646134679856!p!!g!!aws%20sagemaker!19610627692!145752810219"><b>SageMaker RL</b></a>
+                                                </strong> for production consumption.</li>
+
+
+                                            </font>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </p>
+
+
+
+
+
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+            
+
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+                            <div class="single_course text-center">
+                                <video width="1100" height="550" controls autoplay loop>
+                                    <source src="img/projects/rlsoft.mp4" type="video/mp4">
+                                </video>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+                            <!-- Read More Articles -->
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+                            <div class="col-sm text-center">
+                                <a href="index.html#popular-projects" class="boxed_btn">
+                                    <h3>Checkout More Projects</h3>
+                                </a>
+                            </div>
+
+
+
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================ Blog Area end =================-->
 
 
 
