--- a/index.html
+++ b/index.html
@@ -1266,6 +1266,13 @@
                             We offer support to businesses to create end-to-end AI, ML and Data Science pipelines to
                             solve business problems. </p>
 
+                        <ul>
+                            <li><a> <strong><a> VAT:</a></strong> BE 0797.332.179  </a> </li>
+                            <!-- <li><a> <strong><a> Ph:</a></strong> +32-48.53.123.66 </a> </li> -->
+                            <li><a> <li><a> <strong><a> Address:</a></strong> Waversebaan, 3050 Oud-Heverlee, Belgium </a> </li>
+                            <li><a> <br> </a> </li>
+                        </ul>
+
 
                         <a href="#services" class="boxed_btn"> Browse Services </a>
                         <a href="#popular-projects" class="boxed_btn">Browse Projects</a>
@@ -1335,7 +1342,7 @@
 
 
                 <!-- our_team_start -->
-                <div class="our_courses">
+                <!-- <div class="our_courses">
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-12">
@@ -1460,7 +1467,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- our_team_end -->
 
 
