new post: Google gemini AI

--- a/index.html
+++ b/index.html
@@ -725,6 +725,25 @@
                         <div class="row">
 
 
+                            <!-- Gemini starts here -->
+                            <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="gemini.html">
+                                            <img src="img/articles/gemini.png" controls autoplay loop alt="">
+                                        </a>
+                                    </div>
+                                    <div class="courses_info">
+                                        <span>Data & Model Management </span>
+                                        <h3><a href="gemini.html">  Google's Gemini AI: A Leap into Next-Generation AI</a></h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Gemini ends here -->
+
+
                             <!-- DS starts here -->
                             <div class="col-xl-4 col-lg-4 col-md-6">
                                 <div class="single_courses">
@@ -1134,6 +1153,24 @@
 
                     <div class="tab-pane fade" id="data" role="tabpanel" aria-labelledby="data-tab">
                         <div class="row">
+
+                            <!-- Gemini starts here -->
+                            <div class="col-xl-4 col-lg-4 col-md-6">
+                                <div class="single_courses">
+                                    <div class="thumb">
+                                        <a href="gemini.html">
+                                            <img src="img/articles/gemini.png" controls autoplay loop alt="">
+                                        </a>
+                                    </div>
+                                    <div class="courses_info">
+                                        <span>Data & Model Management </span>
+                                        <h3><a href="gemini.html">  Google's Gemini AI: A Leap into Next-Generation AI</a></h3>
+                                        <div class="star_prise d-flex justify-content-between">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Gemini ends here -->
 
 
                             <!-- streamlit starts here -->
