--- a/rlsoft.html
+++ b/rlsoft.html
@@ -159,7 +159,7 @@
                                 <p style="font-weight:bolder;"></p>
                                 <font size="4">
                                     The sofware can act as a <strong> <a id="doc" href=""><b>key tool to speed up your AI adoption</b></a> </strong> for sectors involving 
-                                <strong> <a id="doc" href=""><b> optimization, supply-chain, insurance pricing and critical decision taking problems</b></a> </strong>!
+                                <strong> <a id="doc" href=""><b> optimization, supply-chain, pricing optimization, energy optimization, and critical decision taking problems</b></a> </strong>!
                                 </font>
 
 
@@ -169,14 +169,14 @@
                                             <p style="font-weight:bolder;"></p>
                                             <font size="4">
                                                 <li>Easy RL experimentation with your own<strong> <a id="streamlit"
-                                                            href="https://www.streamlit.io"><b>Digital Twin or Dataset</b></a>
+                                                            href="#"><b>Digital Twin or Dataset</b></a>
                                                     </strong></li>
                                                 <li> Enable your Business Team to experiment Business strategies without deep RL training</li>
-                                                <li> Easy deployment to <strong> <a id="heroku"
-                                                            href="https://www.heroku.com"><b>AWS</b></a>
-                                                    </strong> for production consumption</li>
-                                                <li> Ability to Integrate with <strong> <a id="heroku"
-                                                        href="https://aws.amazon.com/pm/sagemaker/?trk=13ea9a0c-44a8-4207-97d1-d0125804ec5a&sc_channel=ps&ef_id=CjwKCAjw15eqBhBZEiwAbDomEintZx17Yjk22uje1_fEML3kmi4520NEiD4a99WzyJmYzKMPHQkSxhoCst8QAvD_BwE:G:s&s_kwcid=AL!4422!3!646134679856!p!!g!!aws%20sagemaker!19610627692!145752810219"><b>SageMaker RL</b></a>
+                                                <!-- <li> Easy deployment to <strong> <a id="heroku"
+                                                            href="#"><b>AWS</b></a>
+                                                    </strong> for production consumption</li> -->
+                                                <li> Ability to deploy in scale as <strong> <a id="heroku"
+                                                        href="#"><b>AWS SageMaker Models</b></a>
                                                 </strong> for production consumption.</li>
 
 
