--- a/rlsoft.html
+++ b/rlsoft.html
@@ -158,8 +158,15 @@
 
                             </p>
 
-             
-                            <!-- <h2>What?</h2> -->
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+
+
+
+                            <h2> 🚀 Why Our Product Stands Out</h2>
                             <p>
                             <p style="font-weight:bolder;"></p>
                             <font size="4">
@@ -195,6 +202,12 @@
                             </div>
                             </p>
 
+                            <!-- for spacing -->
+                            <div class="">
+                                <p></p><br>
+                                <p></p>
+                            </div> <!-- for spacing  -->
+
 
                             <h2> 💡 Ideal For</h2>
                             <div class="col-md-10 mt-sm-30">
@@ -202,9 +215,12 @@
                                     <ul class="unordered-list">
                                         <p style="font-weight:bolder;"></p>
                                         <font size="4">
-                                            <li> Companies exploring <strong><a href="#"><b>AI-driven optimization.</b></a></strong></li>
-                                            <li> Teams seeking to improve <strong><a href="#"><b>decision-making processes.</b></a></strong></li>
-                                            <li> Businesses aiming to <strong><a href="#"><b>stay ahead in dynamic environments.</b></a></strong></li>
+                                            <li> Companies exploring <strong><a href="#"><b>AI-driven
+                                                            optimization.</b></a></strong></li>
+                                            <li> Teams seeking to improve <strong><a href="#"><b>decision-making
+                                                            processes.</b></a></strong></li>
+                                            <li> Businesses aiming to <strong><a href="#"><b>stay ahead in dynamic
+                                                            environments.</b></a></strong></li>
                                         </font>
                                     </ul>
                                 </div>
